--- a/www/index.html
+++ b/www/index.html
@@ -11,47 +11,38 @@
 
     <!-- Javascript Libraries -->
     <script src="lib/ionic.bundle.min.js"></script>
-
-    <!-- My Javascript -->
-    <script src="js/app.js"></script>
-
-    <!-- Auth0 Lock -->
     <script src="lib/auth0-lock.min.js"></script>
-    <!-- auth0-angular -->
     <script src="lib/auth0-angular.min.js"></script>
-    <!-- angular storage -->
     <script src="lib/angular-storage.min.js"></script>
-    <!-- angular-jwt -->
     <script src="lib/angular-jwt.min.js"></script>
+
+    <!-- Latest major release -->
+    <script src="http://cdn.auth0.com/js/lock-7.min.js"></script>
+
+    <!-- Latest minor release -->
+    <script src="http://cdn.auth0.com/js/lock-7.x.min.js"></script>
+
+    <!-- Latest patch release (recommended for production) -->
+    <script src="http://cdn.auth0.com/js/lock-7.x.y.min.js"></script>
 
     <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+    <!-- My Javascript -->
+    <script src="js/auth0-variables.js"></script>
+    <script src="js/app2.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+
 </head>
-<body ng-app="myApp" ng-controller="MainCtrl">
+<body ng-app="starter">
 
-<ion-side-menus>
+<ion-nav-bar class="bar-positive">
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+</ion-nav-bar>
 
-    <!-- Center -->
-    <ion-side-menu-content>
-        <ion-header-bar class="bar-calm">
-            <button class="button icon button-clear ion-navicon-round" ng-click="toggleLeft()"></button>
-            <h1 class="title">Home</h1>
-        </ion-header-bar>
-        <br/><br/><br/>
-        <p>home page</p>
-    </ion-side-menu-content>
-
-    <!-- Left Side -->
-    <ion-side-menu side="left" class="dark-bg">
-        <ion-list>
-            <ion-item href="index.html" class="active">Home</ion-item>
-        </ion-list>
-        <ion-list>
-            <ion-item href="about.html">About</ion-item>
-        </ion-list>
-    </ion-side-menu>
-
-</ion-side-menus>
+<ion-nav-view></ion-nav-view>
 
 </body>
 </html>
