--- a/www/index.html
+++ b/www/index.html
@@ -5,20 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
     <!-- CSS Libraries -->
-    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+    <link href="lib/ionic.min.css" rel="stylesheet">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 
     <!-- Ionic Libraries -->
-    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
-    <script src="lib/a0-angular-storage/dist/angular-storage.min.js"></script>
-    <script src="lib/angular-jwt/dist/angular-jwt.min.js"></script>
+    <script src="lib/ionic.bundle.min.js"></script>
+    <script src="lib/angular-storage.min.js"></script>
+    <script src="lib/angular-jwt.min.js"></script>
 
     <!-- Chat Libraries -->bower_components
-    <script src="lib/sockjs/sockjs.min.js" type="text/javascript"></script>
-    <script src="lib/stomp-websocket/lib/stomp.min.js" type="text/javascript"></script>
-    <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/lodash/dist/lodash.min.js"></script>
+    <script src="lib/sockjs.min.js" type="text/javascript"></script>
+    <script src="lib/stomp.min.js" type="text/javascript"></script>
+    <script src="lib/ng-stomp.min.js" type="text/javascript"></script>
+    <script src="lib/angular-stomp.min.js" type="text/javascript"></script>
+    <script src="lib/angular.min.js"></script>
+    <script src="lib/lodash.min.js"></script>
 
     <!-- Geo location Library -->
     <script src="lib/cordovaGeolocationModule.js"></script>
@@ -30,6 +34,10 @@
     <script src="js/app2.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
+    <!-- My style -->
+    <link href="css/myStyle.css" rel="stylesheet">
+
 </head>
 <body ng-app="starter">
 
